--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -95,7 +95,15 @@ body {
 }
 
 .no-next-btn {
-  visibility: hidden;
+  text-align: center;
+  font-size: 20px;
+  color: white;
+  background-color: gray;
+  border-radius: 45px 45px 45px 45px;
+  padding: 10px;
+  width: 80px;
+  transition: 0.2s;
+  pointer-events: none;
 }
 
 .my-next-btn:hover {
@@ -111,7 +119,8 @@ body {
   > main
   > div.game
   > div.quizSpace
-  > div:nth-child(1)
+  > div.mySpeech
+  > div
   > span:nth-child(2)
   > span
   > svg {
@@ -147,10 +156,15 @@ body {
 }
 
 .end {
+  margin-top: 3em;
   font-size: xx-large;
   text-align: center;
 }
 
 .score {
   font-size: x-large;
+}
+
+.myNoSpeech {
+  visibility: hidden;
 }
