--- a/frontend/src/style/MainNiveaux.css
+++ b/frontend/src/style/MainNiveaux.css
@@ -1,7 +1,8 @@
-* {
+body {
   margin: 0;
   padding: 0;
 }
+
 .container {
   background-color: white;
   position: absolute;
@@ -28,6 +29,9 @@
   filter: blur(4px);
 }
 
+a {
+  text-decoration: none;
+}
 .btnEnter1,
 .btnEnter2,
 .btnEnter3 .btnEnter4 {
@@ -57,8 +61,7 @@
 .btnEnter1:hover,
 .btnEnter2:hover,
 .btnEnter3:hover .btnEnter4:hover {
-  background-color: rgb(255, 233, 238);
-  color: rgb(253, 173, 190);
+  transform: scale(1.1);
 }
 
 .lock1 {
