--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #ededed;
+  background-color: #ffd2b9;
 }
 
 .header {
@@ -31,8 +31,8 @@ body {
 .leave {
   text-align: center;
   font-size: 20px;
-  color: white;
-  background-color: #f58fd8;
+  color: black;
+  background-color: white;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
   width: 80px;
@@ -40,6 +40,8 @@ body {
 }
 
 .leave:hover {
+  background-color: #ff9153;
+  color: white;
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
   font-size: 21px;
@@ -73,7 +75,7 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   width: 400px;
   height: 2em;
-  border: 1px solid #f58fd8;
+  border: 1px solid #ff9153;
   border-radius: 10px;
   text-align: center;
   font-size: x-large;
@@ -87,7 +89,7 @@ body {
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #f58fd8;
+  background-color: #ff9153;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
   width: 80px;
@@ -119,15 +121,14 @@ body {
   > main
   > div.game
   > div.quizSpace
-  > div.mySpeech
-  > div
+  > div:nth-child(1)
   > span:nth-child(2)
   > span
   > svg {
   display: none;
 }
 
-.progressBar {
+/* .progressBar {
   align-items: center;
   justify-content: start;
   display: flex;
@@ -139,9 +140,9 @@ body {
   padding: 10px;
   gap: 15px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
+} */
 
-.false {
+/* .false {
   height: 50px;
   width: 45px;
   background-size: 52px;
@@ -153,7 +154,7 @@ body {
   width: 45px;
   background-size: 52px;
   background-image: url("../assets/V.png");
-}
+} */
 
 .end {
   margin-top: 3em;
