--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -29,6 +29,7 @@ body {
 }
 
 .leave {
+  text-decoration: none;
   text-align: center;
   font-size: 20px;
   color: black;
@@ -63,12 +64,25 @@ body {
 }
 
 .speaker {
-  filter: grayscale(100%);
-  width: 200px;
+  width: 80px;
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow:
+    6px 6px 12px #c5c5c5,
+    -6px -6px 12px #ffffff;
 }
 
 .speaker:hover {
-  filter: grayscale(0%);
+  color: #666;
+  box-shadow:
+    inset 4px 4px 12px #c5c5c5,
+    inset -4px -4px 12px #ffffff;
 }
 
 .wordType {
@@ -79,7 +93,7 @@ body {
   border-radius: 10px;
   text-align: center;
   font-size: x-large;
-  letter-spacing: 15px;
+  letter-spacing: 10px;
   margin-left: auto;
   margin-right: auto;
   display: block;
@@ -113,9 +127,16 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
 
-.my-start-btn {
-  margin: 0;
+/* .my-start-btn:hover {
+  background-color: #ff9153;
+  box-shadow: 0px 15px 20px #f8c6a9;
+  color: #fff;
+  transform: translateY(-7px);
 }
+
+.my-start-btn:active {
+  transform: translateY(-1px);
+} */
 
 #root
   > main
