--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -1,6 +1,6 @@
 body {
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #ffd2b9;
+  background-color: #f2f2f2;
 }
 
 .header {
@@ -36,7 +36,7 @@ body {
   background-color: white;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
-  width: 80px;
+  width: 100px;
   transition: 0.2s;
 }
 
@@ -64,9 +64,9 @@ body {
 }
 
 .speaker {
-  width: 80px;
+  width: 125px;
   color: #090909;
-  padding: 0.7em 1.7em;
+  padding: 0.5em 1.5em;
   font-size: 18px;
   border-radius: 0.5em;
   background: #e8e8e8;
@@ -106,7 +106,7 @@ body {
   background-color: #ff9153;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
-  width: 80px;
+  width: 100px;
   transition: 0.2s;
 }
 
@@ -117,7 +117,7 @@ body {
   background-color: gray;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
-  width: 80px;
+  width: 100px;
   transition: 0.2s;
   pointer-events: none;
 }
