--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -25,14 +25,15 @@ body {
 }
 
 .level {
-  font-size: 20px;
+  font-size: 1.2em;
 }
 
 .leave {
+  border: solid 1px #ff9153;
   text-decoration: none;
   text-align: center;
-  font-size: 20px;
-  color: black;
+  font-size: 1.2em;
+  color: #ff9153;
   background-color: white;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
@@ -45,7 +46,7 @@ body {
   color: white;
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
-  font-size: 21px;
+  scale: 1.1;
 }
 
 .logo1 {
@@ -79,6 +80,7 @@ body {
 }
 
 .speaker:hover {
+  scale: 1.1;
   color: #666;
   box-shadow:
     inset 4px 4px 12px #c5c5c5,
@@ -123,6 +125,7 @@ body {
 }
 
 .my-next-btn:hover {
+  scale: 1.1;
   cursor: pointer;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
 }
