--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -3,9 +3,15 @@ body {
   background-color: #f2f2f2;
 }
 
+.myLevelBody {
+  height: 100vh;
+  background-color: rgb(236, 236, 236);
+}
+
 .header {
-  margin-top: 1.5em;
-  margin-left: 8em;
+  position: relative;
+  top: 1em;
+  left: 8em;
   gap: 2em;
   display: flex;
   flex-direction: row;
@@ -29,12 +35,11 @@ body {
 }
 
 .leave {
-  border: solid 1px #ff9153;
   text-decoration: none;
   text-align: center;
   font-size: 1.2em;
-  color: #ff9153;
-  background-color: white;
+  color: white;
+  background-color: #feb3ff;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
   width: 100px;
@@ -42,10 +47,10 @@ body {
 }
 
 .leave:hover {
-  background-color: #ff9153;
   color: white;
+  background-color: #feb3ff;
   cursor: pointer;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.4);
+  box-shadow: 0 4px 8px rgba(53, 53, 53, 0.4);
   scale: 1.1;
 }
 
@@ -79,8 +84,24 @@ body {
     -6px -6px 12px #ffffff;
 }
 
+.noSpeaker {
+  visibility: hidden;
+  width: 125px;
+  color: #090909;
+  padding: 0.5em 1.5em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow:
+    6px 6px 12px #c5c5c5,
+    -6px -6px 12px #ffffff;
+}
+
 .speaker:hover {
-  scale: 1.1;
+  /* scale: 1.1; */
   color: #666;
   box-shadow:
     inset 4px 4px 12px #c5c5c5,
@@ -88,10 +109,10 @@ body {
 }
 
 .wordType {
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0px 0px 8px 2px rgba(0.1, 0.1, 0.1, 0.1);
   width: 400px;
   height: 2em;
-  border: 1px solid #ff9153;
+  border: 1px solid white;
   border-radius: 10px;
   text-align: center;
   font-size: x-large;
@@ -105,7 +126,7 @@ body {
   text-align: center;
   font-size: 20px;
   color: white;
-  background-color: #ff9153;
+  background-color: #feb3ff;
   border-radius: 45px 45px 45px 45px;
   padding: 10px;
   width: 100px;
@@ -143,6 +164,7 @@ body {
 
 #root
   > main
+  > div
   > div.game
   > div.quizSpace
   > div:nth-child(1)
