--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -4,19 +4,19 @@ body {
 }
 
 .myLevelBody {
-  height: 100vh;
   background-color: rgb(236, 236, 236);
   font-weight: 600;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  position: relative;
-  top: 1em;
-  left: 8em;
-  gap: 2em;
   display: flex;
   flex-direction: row;
   align-items: center;
+  padding: 3rem;
+  gap: 1rem;
 }
 
 .quizSpace {
@@ -62,11 +62,12 @@ body {
 }
 
 .game {
-  margin: 5em;
-  gap: 3em;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin: auto;
 }
 
 .speaker {
@@ -152,6 +153,12 @@ body {
   cursor: pointer;
   /* box-shadow: 0 4px 8px #f58fd8; */
   scale: 1.1;
+}
+
+.realtime {
+  display: grid;
+  place-items: center;
+  width: 100vw;
 }
 
 /* .my-start-btn:hover {
