--- a/frontend/src/style/CardQuizz.css
+++ b/frontend/src/style/CardQuizz.css
@@ -122,3 +122,18 @@
   flex-direction: row;
   gap: 15px;
 }
+
+.speakerQuizz {
+  width: 70px;
+  color: #090909;
+  padding: 0.5em 1.5em;
+  font-size: 18px;
+  border-radius: 1.5em;
+  background: #e8e8e8;
+  cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow:
+    6px 6px 12px #c5c5c5,
+    -6px -6px 12px #ffffff;
+}
