--- a/frontend/src/pages/Onboarding.css
+++ b/frontend/src/pages/Onboarding.css
@@ -26,9 +26,10 @@ h2 {
 }
 
 .onboarding-btn-next {
+  font-family: "Gill Sans";
   border: none;
   border-radius: 3rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
   font-weight: bold;
   padding: 1rem 2rem;
   transition: 0.2s;
