--- a/frontend/src/style/Instructions.css
+++ b/frontend/src/style/Instructions.css
@@ -5,19 +5,20 @@
 }
 
 .instructions {
+  background-color: white;
+  font-family: "Gill Sans";
+  font-size: 1.5em;
+  font-weight: 600;
   cursor: pointer;
   border: none;
-  padding: 20px 35px;
-  border-radius: 30px;
-  color: #ff9e67;
-  background-color: white;
-  font-size: 1.2em;
-  font-family: Arial, Helvetica, sans-serif;
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  padding: 1rem 2rem;
+  border-radius: 3rem;
+  transition: 0.2s;
 }
 
 .instructions:hover {
   transform: scale(1.1);
+  transition: 0.2s;
 }
 
 .popup {
