fix Result quizz

--- a/frontend/src/pages/Onboarding.css
+++ b/frontend/src/pages/Onboarding.css
@@ -26,7 +26,7 @@ h2 {
 }
 
 .onboarding-btn-next {
-  font-family: "Gill Sans";
+  font-family: "Gill Sans", "Gill Sans MT";
   border: none;
   border-radius: 3rem;
   font-size: 1.2rem;
