--- a/frontend/src/root.css
+++ b/frontend/src/root.css
@@ -7,5 +7,5 @@
 main {
   min-height: 100vh;
   background-color: #f2f2f2;
-  font-family: "Gill Sans";
+  font-family: "Gill Sans", "Gill Sans MT";
 }
