--- a/frontend/src/style/CardQuizz.css
+++ b/frontend/src/style/CardQuizz.css
@@ -25,7 +25,7 @@
 }
 
 .scoreQuizz {
-  display: flex;
+  display: none;
   flex-direction: row;
   justify-content: flex-end;
 }
@@ -36,7 +36,7 @@
 }
 
 .buttonCard {
-  display: flexbox;
+  display: flex;
   background-color: rgba(178, 211, 213, 0.728);
   cursor: pointer;
   border: none;
