--- a/frontend/src/style/Instructions.css
+++ b/frontend/src/style/Instructions.css
@@ -6,7 +6,7 @@
 
 .instructions {
   background-color: white;
-  font-family: "Gill Sans";
+  font-family: "Gill Sans", "Gill Sans MT";
   font-size: 1.5em;
   font-weight: 600;
   cursor: pointer;
