--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -1,7 +1,7 @@
-body {
-  /* font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif; */
+/* body {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   background-color: #f2f2f2;
-}
+} */
 
 .myLevelBody {
   background-color: rgb(236, 236, 236);
@@ -36,7 +36,7 @@ body {
 }
 
 .leave {
-  font-family: "Gill Sans";
+  /* font-family: "Gill Sans"; */
   font-weight: 600;
   text-decoration: none;
   text-align: center;
