--- a/frontend/src/style/WordSynonymComponent.css
+++ b/frontend/src/style/WordSynonymComponent.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT";
   background-color: #f2f2f2;
 }
 
@@ -74,7 +74,7 @@ body {
 }
 
 .synonym-button {
-  font-family: "Gill Sans";
+  font-family: "Gill Sans", "Gill Sans MT";
   background-color: #f2f2f2; /* Non-selected color */
   color: black; /* Text color */
   padding: 1rem 2rem;
