--- a/frontend/src/style/MainNiveaux.css
+++ b/frontend/src/style/MainNiveaux.css
@@ -34,8 +34,9 @@ a {
 }
 .btnEnter1,
 .btnEnter2,
-.btnEnter3 .btnEnter4 {
-  font-family: "Gill Sans", "Gill Sans MT";
+.btnEnter3,
+.btnEnter4 {
+  font-family: "Gill Sans";
   font-size: 1.2rem;
   font-weight: 600;
   cursor: pointer;
@@ -54,16 +55,16 @@ a {
   display: block;
 }
 .btnEnter3 {
-  display: none;
+  display: block;
 }
-
 .btnEnter4 {
   display: none;
 }
 
 .btnEnter1:hover,
 .btnEnter2:hover,
-.btnEnter3:hover .btnEnter4:hover {
+.btnEnter3:hover,
+.btnEnter4:hover {
   transition: 0.2s;
   transform: scale(1.1);
 }
