--- a/frontend/src/pages/Onboarding.css
+++ b/frontend/src/pages/Onboarding.css
@@ -119,3 +119,44 @@ h2 {
   width: 100%;
   height: 100%;
 }
+
+.animation {
+  box-sizing: border-box;
+  overflow: hidden;
+  position: absolute;
+}
+.animeB {
+  width: 100%;
+  animation: b 2s forwards;
+  animation-delay: 2s;
+}
+.animeH {
+  width: 100%;
+  animation: h 2s forwards;
+  animation-delay: 2s;
+}
+
+@keyframes a {
+  100% {
+    display: none;
+  }
+}
+@keyframes h {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(500px);
+    display: none;
+  }
+}
+
+@keyframes b {
+  0% {
+    transform: translateY(0px);
+  }
+  100% {
+    transform: translateY(-500px);
+    display: none;
+  }
+}
