--- a/frontend/src/style/ListenGame.css
+++ b/frontend/src/style/ListenGame.css
@@ -23,12 +23,22 @@
   /* box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); */
   background-color: white;
   display: flex;
+  width: 800px;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   gap: 2em;
   padding: 3em;
   border-radius: 3rem;
+}
+
+.quizSpace h3 {
+  font-size: 1.5rem;
+  font-weight: 600;
+}
+
+.speech-icon {
+  width: 400px;
 }
 
 .level {
@@ -122,9 +132,12 @@
   text-decoration: none;
   text-align: center;
   font-size: 1.2em;
-  border-radius: 45px 45px 45px 45px;
+  font-weight: 700;
+  border-radius: 3rem;
   padding: 1rem 2rem;
   transition: 0.2s;
+  border: none;
+  scale: 1.1;
 }
 
 .no-next-btn {
@@ -132,14 +145,11 @@
   text-align: center;
   font-size: 1.2em;
   font-weight: 600;
-  border-radius: 45px 45px 45px 45px;
+  border-radius: 3rem;
   padding: 1rem 2rem;
   border: none;
   transition: 0.2s;
-  color: #b3b3b3;
-  background-color: white;
   pointer-events: none;
-  transition: 0.2s;
 }
 
 .realtime {
@@ -159,18 +169,9 @@
   transform: translateY(-1px);
 } */
 
-#root
-  > main
-  > div
-  > div.game
-  > div.quizSpace
-  > div:nth-child(1)
-  > span:nth-child(2)
-  > span
-  > svg {
+#root > main > div > div.game > div.quizSpace > div > span:nth-child(2) {
   display: none;
 }
-
 /* .progressBar {
   align-items: center;
   justify-content: start;
