--- a/frontend/src/style/Results.css
+++ b/frontend/src/style/Results.css
@@ -1,15 +1,13 @@
 .myResult {
   text-align: center;
-  width: 350px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: white;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2em;
-  padding: 2em;
-  border-radius: 20px;
+  gap: 3em;
+  padding: 3em;
+  border-radius: 3rem;
 }
 
 .spanResult {
@@ -19,7 +17,7 @@
 .scoreResult {
   font-weight: 600;
   padding: 1rem 3rem;
-  border-radius: 45px 45px 45px 45px;
+  border-radius: 3rem;
   background-color: #f58fd8;
   color: white;
   font-size: 22px;
