fixed API, added card Result

--- a/frontend/src/style/CardQuizz.css
+++ b/frontend/src/style/CardQuizz.css
@@ -15,7 +15,7 @@
   border: none;
   padding: 20px 40px;
   border-radius: 30px;
-  background-color: rgb(253, 173, 190);
+  background-color: #b3b3b3;
   color: white;
   font-weight: 600;
 }
@@ -80,9 +80,11 @@
   padding: 20px;
   border-radius: 20px;
   flex-wrap: wrap;
-  height: 300px;
-  width: 550px;
+  height: 500px;
+  width: 750px;
   margin: 80px;
+  font-size: 1.5rem;
+  font-weight: 600;
 }
 
 .listenContainer {
@@ -102,9 +104,9 @@
 .buttonValidate {
   cursor: pointer;
   border: none;
-  padding: 10px 20px;
+  padding: 20px 40px;
   border-radius: 30px;
-  background-color: grey;
+  background-color: #b3b3b3;
   color: white;
   font-weight: 600;
 }
