--- a/frontend/src/root.css
+++ b/frontend/src/root.css
@@ -5,7 +5,8 @@
   font-family: "Gill Sans", "Gill Sans MT";
 }
 
-main {
+#root {
+  overflow: hidden;
   min-height: 100vh;
   background-color: #f2f2f2;
 }
