--- a/frontend/src/style/Menu.css
+++ b/frontend/src/style/Menu.css
@@ -72,3 +72,28 @@ canvas {
   display: flex;
   gap: 145px;
 }
+
+.clipped-bg {
+  background-color: #f2f2f2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 200;
+  width: 100%;
+  height: 100vh;
+  padding: 16rem;
+  overflow: hidden;
+  transform-origin: center;
+  clip-path: polygon(
+    0% 0%,
+    0% 100%,
+    45% 100%,
+    45% 45%,
+    55% 45%,
+    55% 55%,
+    45% 55%,
+    45% 100%,
+    100% 100%,
+    100% 0%
+  );
+}
