--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,7 @@
   left: 0;
   width: 100%;
   height: 100vh;
-  transform-origin: left;
+  transform-origin: right;
   z-index: 99;
 }
 
@@ -15,7 +15,7 @@
   width: 100%;
   height: 100vh;
   background-color: white;
-  transform-origin: left;
+  transform-origin: right;
   z-index: 99;
 }
 
