Add rest score button after the 40points - update the gauge component logic, modify menu and some css

--- a/frontend/src/style/Instructions.css
+++ b/frontend/src/style/Instructions.css
@@ -20,6 +20,30 @@
   transform: scale(1.1);
   transition: 0.2s;
 }
+/* Modif Rester Start  */
+.container-instructionsR {
+  position: absolute;
+  top: 4.5%;
+  left: 15%;
+}
+
+.instructionsR {
+  background-color: white;
+  font-family: "Gill Sans", "Gill Sans MT";
+  font-size: 1.5em;
+  font-weight: 600;
+  cursor: pointer;
+  border: none;
+  padding: 1rem 2rem;
+  border-radius: 3rem;
+  transition: 0.2s;
+}
+
+.instructionsR:hover {
+  transform: scale(1.1);
+  transition: 0.2s;
+}
+/* Modif Reset END */
 
 .popup {
   display: block;
