--- a/frontend/src/style/CardQuizz.css
+++ b/frontend/src/style/CardQuizz.css
@@ -6,20 +6,25 @@
   flex-direction: row;
   align-items: center;
 }
+
 .levelQuizz {
   font-size: 1.2em;
-  margin: 50px 0px 0px;
+}
+
+.questionQ {
+  text-align: center;
 }
 
 .leaveQuizz {
   cursor: pointer;
   border: none;
-  padding: 20px 40px;
-  border-radius: 30px;
   background-color: #f58fd8;
   color: white;
+  font-size: 1.2em;
+  border-radius: 3rem;
   font-weight: 600;
-  margin-top: 50px;
+  padding: 1rem 2rem;
+  transition: 0.2s;
 }
 
 .leaveQuizz:hover {
@@ -72,35 +77,34 @@
 }
 
 .resultContainer {
-    display: grid;
-    place-items: center;
-    width: 100vw;
+  display: grid;
+  place-items: center;
+  width: 100vw;
 }
 
 .containerResult {
-  margin:auto;
+  margin: auto;
 }
 
 .myLevelBodyQ {
   background-color: rgb(236, 236, 236);
-    font-weight: 600;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+  font-weight: 600;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .gameQ {
   display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    margin: auto;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  margin: auto;
 }
 
 .questionCardContainer {
   border-width: 4px 4px 4px 4px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   background-color: white;
   display: flex;
   flex-direction: column;
@@ -117,29 +121,31 @@
   font-weight: 600;
 }
 
-
-.listenContainer {
+/* .listenContainer {
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   width: 100%;
-}
+} */
 
-.buttonListen {
+/* .buttonListen {
   display: flex;
   flex-direction: row;
   border: none;
   border-radius: 30px;
-}
+} */
 
 .buttonValidate {
   cursor: pointer;
+  text-decoration: none;
+  text-align: center;
+  font-size: 0.85em;
+  font-weight: 700;
+  border-radius: 3rem;
+  padding: 1rem 2rem;
+  transition: 0.2s;
   border: none;
-  padding: 20px 40px;
-  border-radius: 30px;
-  background-color: #b3b3b3;
-  color: white;
-  font-weight: 600;
+  scale: 1.1;
 }
 
 .buttonValidate:hover {
