--- a/frontend/src/style/EndComponent.css
+++ b/frontend/src/style/EndComponent.css
@@ -1,6 +1,5 @@
 .end-component{
     background-color: rgb(242,242,242);
-   
     text-align: center;
     min-height: 100vh;
     display: flex;
@@ -15,6 +14,15 @@
   width: 200px;
   margin-bottom: 20px;
   border-radius: 30px;
+  margin: 20px;
+}
+
+.btns-restart{
+  display: flex;
+  gap: 2rem;
+  margin: 20px;
+  justify-content: center;
+  align-items: center;
 }
 
 .btn-restart{
@@ -38,4 +46,10 @@
   .btn-restart:hover{
     transform: scale(1.1);
 
+  }
+
+  @media screen and (max-width: 700px) { 
+    .btns-restart { 
+      display: block; 
+    } 
   }
