--- a/frontend/src/style/EndComponent.css
+++ b/frontend/src/style/EndComponent.css
@@ -1,24 +1,22 @@
-.end-component{
-    background-color: rgb(242,242,242);
-    text-align: center;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 10px;
-    
-   
+.end-component {
+  background-color: rgb(242, 242, 242);
+  text-align: center;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 10px;
 }
 
-.picture-user{
+.picture-user {
   width: 200px;
   margin-bottom: 20px;
   border-radius: 30px;
   margin: 20px;
 }
 
-.btns-restart{
+.btns-restart {
   display: flex;
   gap: 2rem;
   margin: 20px;
@@ -26,31 +24,28 @@
   align-items: center;
 }
 
-.btn-restart{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(253,173,190);
-    cursor: pointer;
-    border: none;
-    padding: 20px 65px;
-    border-radius: 30px;
-    color: rgb(255,242,230);
-    font-weight: 600;
-    margin: 30px auto;
-    font-size: 1rem;
-    transition: 0.5s ease-in-out;
-    
-    
-  }
+.btn-restart {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(253, 173, 190);
+  cursor: pointer;
+  border: none;
+  padding: 20px 65px;
+  border-radius: 30px;
+  color: rgb(255, 242, 230);
+  font-weight: 600;
+  margin: 30px auto;
+  font-size: 1rem;
+  transition: 0.5s ease-in-out;
+}
 
-  .btn-restart:hover{
-    transform: scale(1.1);
+.btn-restart:hover {
+  transform: scale(1.1);
+}
 
+@media screen and (max-width: 700px) {
+  .btns-restart {
+    display: block;
   }
-
-  @media screen and (max-width: 700px) { 
-    .btns-restart { 
-      display: block; 
-    } 
-  }
+}
